[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "pi-vae-pytorch"
dependencies = ["torch"]
requires-python = ">= 3.9"
authors = [
    {name = "Marlan McInnes-Taylor", email = "mmcinnestaylor@gmail.com"}
]
maintainers = [
    {name = "Marlan McInnes-Taylor", email = "mmcinnestaylor@gmail.com"}
]
description = "A Pytorch implementation of Poisson Identifiable VAE (pi-VAE), a variational auto encoder used to construct latent variable models of neural activity while simultaneously modeling the relation between the latent and task variables."
readme = "README.md"
keywords = [
    "vae",
    "pi-vae",
    "poisson identifiable vae",
    "poisson identifiable variational autoencoder",
    "identifiable vae",
    "identifiable variational autoencoder"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://mmcinnestaylor.github.io/pi-vae-pytorch/"
Repository = "https://github.com/mmcinnestaylor/pi-vae-pytorch"

[tool.setuptools_scm]
